deprecated jee dependencies basic - fix (open modules)